--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.12.1",
     "instagram-node-lib": "^0.1.1",
     "request": "^2.53.0",
-    "socket.io": "^1.3.4"
+    "socket.io": "^1.3.4",
+    "url": "^0.10.3"
   }
 }
