--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "instagramRealtimeTest",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./bin/www"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.12.0",
-    "express": "^4.12.1",
-    "instagram-node-lib": "^0.1.1",
-    "request": "^2.53.0",
-    "socket.io": "^1.3.4",
-    "url": "^0.10.3"
+    "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.1",
+    "express": "~4.12.0",
+    "jade": "~1.9.2",
+    "morgan": "^1.5.1",
+    "serve-favicon": "~2.2.0"
   }
 }
