--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.0",
+    "instagram-node-lib": "^0.1.1",
     "jade": "~1.9.2",
     "morgan": "^1.5.1",
-    "serve-favicon": "~2.2.0"
+    "request": "^2.53.0",
+    "serve-favicon": "~2.2.0",
+    "socket.io": "^1.3.4",
+    "url": "^0.10.3"
   }
 }
