--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.0",
+    "express-rate-limit": "^1.0.2",
     "http": "0.0.0",
     "instagram-node-lib": "^0.1.1",
     "jade": "~1.9.2",
